# navidrome

./: CAPABILITIES.md  Cargo.toml  Dockerfile  README.md  compose.yml
docs/: navidrome.md
lxc/: provision.sh
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh
src/: abi_export.rs  lib.rs  main.rs
vm/: provision.sh
