[package]
name = "navidrome"
version = "0.1.0"
edition = "2021"
description = "Music streaming (Subsonic API) — orca service-backend"

[package.metadata.orca]
category = "media"

[lib]
name = "navidrome"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# navidrome is a BACKEND-ONLY orca plugin: zero #[orca_tool]s. It registers a
# ServiceBackend across the cdylib FFI seam and reaches the whole orca system
# through plugin-toolkit alone.
[dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
# The ONE non-orca dep: #[export_root_module] expands to bare ::abi_stable paths.
abi_stable = "0.11"

[dev-dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints.clippy]
let_underscore_must_use = "deny"
